<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.uscitizenshipquiz.Quiz9Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/include_image_flag_top_tall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_xl"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <include layout="@layout/include_quiz_progress" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/spacer_m"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/spacer_s"
                            android:text="@string/quiz_9_question"
                            android:textColor="@color/mediumBlue"
                            android:textSize="@dimen/text_size_l" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quiz_9_answer_1"
                                android:textSize="@dimen/text_size_quiz_option" />

                            <RadioButton
                                android:id="@+id/radio2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quiz_9_answer_2"
                                android:textSize="@dimen/text_size_quiz_option" />

                            <RadioButton
                                android:id="@+id/radio3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quiz_9_answer_3"
                                android:textSize="@dimen/text_size_quiz_option" />

                            <RadioButton
                                android:id="@+id/radio4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quiz_9_answer_4"
                                android:textSize="@dimen/text_size_quiz_option" />

                        </RadioGroup>

                        <Button
                            android:id="@+id/btnSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacer_l"
                            android:background="@drawable/gradient_background_blue"
                            android:text="@string/quiz_button_submit"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button_s" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>