<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.uscitizenshipquiz.FlashCardsIntroActivity"
    android:background="@drawable/gradient_background_red">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/include_image_flag_top_short" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_xl"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/spacer_m"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/spacer_s"
                        android:text="@string/activity_title_flash_cards_extended"
                        android:textColor="@color/mediumBlue"
                        android:textSize="@dimen/text_size_l" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="1sp"
                        android:paddingBottom="@dimen/spacer_s"
                        android:text="@string/activity_flash_cards_intro1"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/text_size_m" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/rotate_landscape"
                        android:layout_marginBottom="@dimen/spacer_s"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="1sp"
                        android:paddingBottom="@dimen/spacer_l"
                        android:text="@string/activity_flash_cards_intro2"
                        android:textSize="@dimen/text_size_s" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gradient_background_blue"
                        android:onClick="startFlashCards"
                        android:text="@string/button_proceed"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_button_s" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>