<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.uscitizenshipquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/include_image_flag_top_short"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:padding="@dimen/spacer_xl">

            <include layout="@layout/include_uscis_logo"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacer_m"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/spacer_m"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/activity_main_intro"
                        android:textColor="#0E385D"
                        android:textSize="@dimen/text_size_m" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_background_blue"
                android:text="@string/activity_title_quiz"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button_m"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/spacer_m"
                android:onClick="openCivicsQuizActivity" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_background_blue"
                android:text="@string/activity_title_flash_cards"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button_m"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/spacer_m"
                android:onClick="openFlashCardsActivity" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
